syntax = "proto3";

option java_package = "com.sdj3.protobuf";

service User {
  rpc AddUser(UserInfo) returns (ResponceMessage);
}

message UserInfo{
  int32 id = 1;
  string username = 2;
  string password = 3;
}

message ResponceMessage{
  string rspMessage = 1;
  int32 code = 2;
}